--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # VS code checkpoints and cache
 .vscode
 groundwater/__pycache__/
+groundwater/__check_bio__/
 groundwater/NumericalModel/__pycache__/
 __pycache__
 
