typo and formats changes in html and py files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ groundwater/__pycache__/
 groundwater/NumericalModel/__pycache__/
 __pycache__
 
+groundwater/config.py
+groundwater/NumericalModel/numericalModel.py
+groundwater/water.py
